--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "firebase": "^10.7.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-confirm-toast": "^1.0.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
