--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,11 @@
     "firebase": "^10.7.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
-    "react-confirm-toast": "^1.0.7",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
