--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-toastify": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
